--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,17 +1,17 @@
 <header class="container-fluid">
     <nav class="navbar vickys-nav container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-              </button>
+        <div class="logo navbar-left">
+            <img src="../assets/logo-1.png" />
         </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <div class="logo navbar-left">
-                <img src="../assets/logo-1.png"/>
-            </div>
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-links">
+                      <span class="sr-only">Toggle navigation</span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                  </button>
+        </div>
+        <div class="collapse navbar-collapse header-links" id="nav-links">
             <ul class="nav navbar-nav navbar-left">
                 <li><a href="/">Home</a></li>
                 <li><a href="/aboutus">About Us</a></li>
@@ -19,8 +19,8 @@
                 <li><a href="/contact-us">Order</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><span class="total-amount">TOTAL AMOUNT: $35.00</span></li>
-                <li><a href=""><img src="../assets/cart.png"></a></li>
+                <li><p class="total">TOTAL AMOUNT:&nbsp;<span id="total-amount">$35.00</span>&nbsp; |&nbsp; </p></li>
+                <li><a class="cart" href=""><p class="total-quantity">12</p></a></li>
             </ul>
         </div>
     </nav>
