--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,30 +8,31 @@ body {
     font-family: $font-stack;
     max-width: $page-width;
     margin: 0 auto;
-    font-weight: 400;
+    font-weight: $font-weight-normal;
 }
 
 a {
     color: $white;
 }
+
 a:hover {
     color: $pink;
     text-decoration: none;
 }
 
-header, footer {
+header,
+footer {
     background-color: $blue-bg;
 }
 
 //header and footer sections can be in their own files as they grow bigger
 header {
     height: 56px;
-    font: 16px 600;
-    color: $white;
-
+    font-family: 16px;
+    font-weight: $font-weight-semibold;
     .vickys-nav {
         height: 56px;
-        margin: 0 auto;        
+        margin: 0 auto;
         padding: 0;
         text-transform: uppercase;
 
@@ -40,12 +41,30 @@ header {
             text-decoration: none;
             background-color: $blue-bg;
         }
-        .total-quatity {
+        .total-quantity {
             color: $primary-color;
             margin-top: 17px;
         }
-        .logo {
-            margin-top: 7.5px;
+    }
+    .logo {
+        margin: 7.5px 0 0 15px;
+    }
+    .header-links {
+        margin-top: 4px;
+    }
+    .total {
+        color: $white;
+        margin-top: 15px;
+    }
+    .cart {
+        background: url("../assets/cart.png") no-repeat center;
+        color: $primary-color;
+        margin: 10px 0;
+        width: 32px;
+        height: 30px;
+        .total-quantity {
+            margin-top: -12px;
+            margin-left: -2px;
         }
     }
 }
@@ -53,21 +72,20 @@ header {
 footer {
     height: 259px;
     padding: 46px 80px 0px;
-
-    .footer-title, h5 {
+    .footer-title,
+    h5 {
         color: $pink;
         text-transform: uppercase;
-        font-weight: 900;
+        font-weight: $font-weight-heavy;
         font-size: 16px;
     }
-    
+
     .footer-category {
         display: inline-block;
         width: 30%;
         text-align: center;
         padding: 0 10px;
-
-        ul{
+        ul {
             padding: 0;
             margin: 0;
             list-style: none;
