--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,17 +1,16 @@
 $white: #FFFFFF;
 $pinkish-grey: #bdbdbd;
-
-$primary-color: #4a4a4a;  //default font
-
+$primary-color: #4a4a4a; //default font
 $grey-bg: #4a4a4a;
 $pink: #d33169; //ce1b69
 $blue-bg: #28425a;
 $blue: #24435a;
-
 $green: #6da50a;
 $torquois: #86ebb9;
-
 $page-width: 1300px;
-
 $font-stack: Raleway;
 $font-size-small: 14px;
+$font-weight-normal: 400;
+$font-weight-semibold: 600;
+$font-weight-bold: 800;
+$font-weight-heavy: 900;
