moved css files

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -18,7 +18,7 @@
                 <li><a href="/occasions">Occasions</a></li>
                 <li><a href="/contact-us">Order</a></li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right price_">
                 <li><p class="total">TOTAL AMOUNT:&nbsp;<span id="total-amount">$35.00</span>&nbsp; |&nbsp; </p></li>
                 <li><a class="cart" href=""><p class="total-quantity">12</p></a></li>
             </ul>
